--- a/options.conf
+++ b/options.conf
@@ -4,6 +4,7 @@ url = https://github.com/lcn2/calc/releases/download/2.12.7.2/calc-2.12.7.2.tar.
 archives = 
 giturl = https://github.com/lcn2/calc.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
