--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = calc
-url = https://github.com/lcn2/calc/releases/download/2.12.7.2/calc-2.12.7.2.tar.bz2
+url = https://github.com/lcn2/calc/releases/download/2.12.7.6/calc-2.12.7.6.tar.bz2
 archives = 
 giturl = https://github.com/lcn2/calc.git
 domain = 
@@ -14,7 +14,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
