--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = calc
-url = https://github.com/lcn2/calc/releases/download/v2.14.1.5/calc-2.14.1.5.tar.bz2
+url = https://github.com/lcn2/calc/releases/download/v2.14.1.6/calc-2.14.1.6.tar.bz2
 archives = 
 giturl = https://github.com/lcn2/calc.git
 domain = 
@@ -60,7 +60,7 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
