--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = calc
-url = https://github.com/lcn2/calc/releases/download/v2.15.0.2/calc-2.15.0.2.tar.bz2
+url = https://github.com/lcn2/calc/releases/download/v2.15.0.4/calc-2.15.0.4.tar.bz2
 archives = 
 giturl = https://github.com/lcn2/calc.git
 domain = 
@@ -59,6 +59,8 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
+# configure build for apx
+use_apx = true
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
