--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = calc
-url = https://github.com/lcn2/calc/releases/download/v2.15.0.4/calc-2.15.0.4.tar.bz2
+url = https://github.com/lcn2/calc/releases/download/v2.15.0.5/calc-2.15.0.5.tar.bz2
 archives = 
 giturl = https://github.com/lcn2/calc.git
 domain = 
@@ -9,6 +9,8 @@ alias =
 [autospec]
 # build 32 bit libraries
 32bit = false
+# allow windows executables (*.exe, *.dll) to be packaged
+allow_exe = false
 # allow package to build with test failures
 allow_test_failures = false
 # unset %build ld_as_needed variable
