--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = calc
-url = https://github.com/lcn2/calc/releases/download/v2.15.0.5/calc-2.15.0.5.tar.bz2
+url = https://github.com/lcn2/calc/releases/download/v2.15.0.7/calc-2.15.0.7.tar.bz2
 archives = 
 giturl = https://github.com/lcn2/calc.git
 domain = 
@@ -62,7 +62,7 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for apx
-use_apx = true
+use_apx = false
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
