calc: Autospec creation for update from version 2.15.0.7 to version 2.15.1.0
Landon Curt Noll (9):
      add regression test for ilog2 bug
      updated codeql-analysis.yml
      fix dependabot.yml location
      convert ASCII TABs to ASCII SPACEs
      prep CHANGES for the next release of calc
      prep CHANGES for the next release of calc
      fix trailblank and sort .gitignore
      prep CHANGES for the next release of calc
      Release v2.15.1.0

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = calc
-url = https://github.com/lcn2/calc/releases/download/v2.15.0.7/calc-2.15.0.7.tar.bz2
+url = https://github.com/lcn2/calc/releases/download/v2.15.1.0/calc-2.15.1.0.tar.bz2
 archives = 
 giturl = https://github.com/lcn2/calc.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
