--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = calc
-url = https://github.com/lcn2/calc/releases/download/v2.15.1.0/calc-2.15.1.0.tar.bz2
+url = https://github.com/lcn2/calc/releases/download/v2.15.1.1/calc-2.15.1.1.tar.bz2
 archives = 
 giturl = https://github.com/lcn2/calc.git
 domain = 
@@ -17,6 +17,8 @@ allow_test_failures = false
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
 autoupdate = true
+# try to use mock short circuit to avoid full rebuilds
+avoid_rebuild = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
